--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-scripts": "2.1.8"
   },
   "scripts": {
-    "start": "npm run build",
+    "start": "react-scripts build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
